# grem

./: .gitattributes  .gitignore  LICENSE  README.md  TODO
c_project/: Makefile  README
c_project/src/: graph.c  graph.h  graph_dist.c  graph_dist.h  spring_embed.c  spring_embed.h
c_project/test/: NOTE  t_graph.c
doc/: experiments.ipynb  usage.ipynb
grem/: __init__.py  viz.py  wrapper.cpp
pkg/: pyproject.toml  rebuild.sh  requirements.txt  setup.py
